--- a/catalog.html
+++ b/catalog.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -10,12 +11,14 @@
   <link rel="preload" href="fonts/Poppins-Medium.woff2" as="font" type="font/woff2" crossorigin="anonymous">
   <link rel="preload" href="fonts/Poppins-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
   <link rel="preload" href="fonts/CormorantGaramond-Italic.woff2" as="font" type="font/woff2" crossorigin="anonymous">
-  <link rel="preload" href="fonts/CormorantGaramond-MediumItalic.woff2" as="font" type="font/woff2" crossorigin="anonymous">
+  <link rel="preload" href="fonts/CormorantGaramond-MediumItalic.woff2" as="font" type="font/woff2"
+    crossorigin="anonymous">
   <link rel="preload" href="fonts/CormorantGaramond-SemiBold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
   <link rel="preload" href="fonts/CormorantGaramond-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 
   <link rel="stylesheet" href="css/style.min.css">
 </head>
+
 <body>
   <header class="header header--nojs">
     <div class="header__wrapper container">
@@ -41,7 +44,7 @@
         </svg>
       </a>
 
-      <a class="header__login" href="#">Login</a>
+      <a class="header__login" href="login.html">Login</a>
 
       <button class="header__cart">
         <span>Cart 0</span>
@@ -91,16 +94,120 @@
     </section>
 
     <section class="catalog__wrapper container">
-      <div class="catalog__filter"></div>
+      <aside class="catalog__filter filter">
+        <button class="filter__toggle" type="button" aria-label="Открыть фильтр">Filter</button>
+
+        <form class="form-accordion filter__form" method="get" action="https://echo.htmlacademy.ru">
+          <fieldset class="form-accordion__item form-accordion__item--nojs">
+            <div class="filter__title form-accordion__button">
+              <h3>Product</h3>
+              <svg class="form-accordion__toggle form-accordion__toggle--close" width="16" height="15">
+                <use xlink:href="img/sprite.svg#pointer"></use>
+              </svg>
+            </div>
+            <ul class="form-accordion__block">
+              <li>
+                <input class="visually-hidden" type="checkbox" name="necklaces" id="necklaces" checked>
+                <label for="necklaces">Necklaces</label>
+              </li>
+              <li>
+                <input class="visually-hidden" type="checkbox" name="chokers" id="chokers" checked>
+                <label for="chokers">Chokers</label>
+              </li>
+              <li>
+                <input class="visually-hidden" type="checkbox" name="rings" id="rings">
+                <label for="rings">Rings</label>
+              </li>
+              <li>
+                <input class="visually-hidden" type="checkbox" name="earrings" id="earrings" checked>
+                <label for="earrings">Earrings</label>
+              </li>
+            </ul>
+          </fieldset>
+
+          <fieldset class="form-accordion__item form-accordion__item--nojs">
+            <div class="filter__title form-accordion__button">
+              <h3>Material</h3>
+              <svg class="form-accordion__toggle form-accordion__toggle--close" width="16" height="15">
+                <use xlink:href="img/sprite.svg#pointer"></use>
+              </svg>
+            </div>
+            <ul class="form-accordion__block">
+              <li>
+                <input class="visually-hidden" type="checkbox" name="gold" id="gold" checked>
+                <label for="gold">Gold</label>
+              </li>
+              <li>
+                <input class="visually-hidden" type="checkbox" name="silver" id="silver">
+                <label for="silver">Silver</label>
+              </li>
+            </ul>
+          </fieldset>
+
+          <fieldset class="form-accordion__item form-accordion__item--nojs">
+            <div class="filter__title form-accordion__button">
+              <h3>Collection</h3>
+              <svg class="form-accordion__toggle form-accordion__toggle--close" width="16" height="15">
+                <use xlink:href="img/sprite.svg#pointer"></use>
+              </svg>
+            </div>
+            <ul class="form-accordion__block">
+              <li>
+                <input class="visually-hidden" type="checkbox" name="pink-flamingo" id="pink-flamingo" checked>
+                <label for="pink-flamingo">Pink flamingo</label>
+              </li>
+              <li>
+                <input class="visually-hidden" type="checkbox" name="dreams" id="dreams">
+                <label for="dreams">Dreams</label>
+              </li>
+            </ul>
+          </fieldset>
+
+          <fieldset class="form-accordion__item form-accordion__item--nojs">
+            <div class="filter__title form-accordion__button">
+              <h3>Price</h3>
+              <svg class="form-accordion__toggle form-accordion__toggle--close" width="16" height="15">
+                <use xlink:href="img/sprite.svg#pointer"></use>
+              </svg>
+            </div>
+
+            <div class="control form-accordion__block">
+              <div class="control__range-wrap">
+                <div class="control__range">
+                  <div class="control__scale">
+                    <div class="control__bar"></div>
+                  </div>
+                  <div class="control__toggle control__toggle--min"></div>
+                  <div class="control__toggle control__toggle--max"></div>
+                </div>
+              </div>
+              <div class="control__price">
+                <label for="min-price">$
+                  <input type="number" name="min-price" id="min-price" placeholder="$ 55" value="55" min="0">
+                </label>
+                <label for="max-price">$
+                  <input type="number" name="max-price" id="max-price" placeholder="$ 155" value="155">
+                </label>
+              </div>
+            </div>
+          </fieldset>
+
+          <button type="submit">Apply</button>
+          <button type="reset">Clear All</button>
+        </form>
+      </aside>
+
       <div>
         <ul class="catalog__product">
           <li class="catalog__item">
             <a class="product" href="#">
               <div class="product__image product__image--catalog">
                 <picture>
-                  <source type="image/webp" srcset="img/double-pearl-earrings.webp, img/double-pearl-earrings@2x.webp 2x">
+                  <source type="image/webp"
+                    srcset="img/double-pearl-earrings.webp, img/double-pearl-earrings@2x.webp 2x">
                   <!-- 1х: 270px; 2x: 540px -->
-                  <img src="img/double-pearl-earrings.jpg" srcset="img/double-pearl-earrings@2x.jpg  2x" alt="the pendant" width="270" height="272">
+                  <img src="img/double-pearl-earrings.jpg" srcset="img/double-pearl-earrings@2x.jpg  2x"
+                    alt="the pendant" width="270" height="272">
                 </picture>
               </div>
               <div class="product__description">
@@ -116,9 +223,11 @@
             <a class="product" href="#">
               <div class="product__image product__image--catalog">
                 <picture>
-                  <source type="image/webp" srcset="img/black-choker-gold-bead.webp, img/black-choker-gold-bead@2x.webp 2x">
+                  <source type="image/webp"
+                    srcset="img/black-choker-gold-bead.webp, img/black-choker-gold-bead@2x.webp 2x">
                   <!-- 1х: 270px; 2x: 540px -->
-                  <img src="img/black-choker-gold-bead.jpg" srcset="img/black-choker-gold-bead@2x.jpg  2x" alt="the pendant" width="270" height="272">
+                  <img src="img/black-choker-gold-bead.jpg" srcset="img/black-choker-gold-bead@2x.jpg  2x"
+                    alt="the pendant" width="270" height="272">
                 </picture>
               </div>
               <div class="product__description">
@@ -134,9 +243,11 @@
             <a class="product" href="#">
               <div class="product__image product__image--catalog">
                 <picture>
-                  <source type="image/webp" srcset="img/gold-layered-necklace.webp, img/gold-layered-necklace@2x.webp 2x">
+                  <source type="image/webp"
+                    srcset="img/gold-layered-necklace.webp, img/gold-layered-necklace@2x.webp 2x">
                   <!-- 1х: 270px; 2x: 540px -->
-                  <img src="img/gold-layered-necklace.jpg" srcset="img/gold-layered-necklace@2x.jpg  2x" alt="the pendant" width="270" height="272">
+                  <img src="img/gold-layered-necklace.jpg" srcset="img/gold-layered-necklace@2x.jpg  2x"
+                    alt="the pendant" width="270" height="272">
                 </picture>
               </div>
               <div class="product__description">
@@ -152,9 +263,11 @@
             <a class="product" href="#">
               <div class="product__image product__image--catalog">
                 <picture>
-                  <source type="image/webp" srcset="img/blue-gemstone-pendant.webp, img/blue-gemstone-pendant@2x.webp 2x">
+                  <source type="image/webp"
+                    srcset="img/blue-gemstone-pendant.webp, img/blue-gemstone-pendant@2x.webp 2x">
                   <!-- 1х: 270px; 2x: 540px -->
-                  <img src="img/blue-gemstone-pendant.jpg" srcset="img/blue-gemstone-pendant@2x.jpg  2x" alt="the pendant" width="270" height="272">
+                  <img src="img/blue-gemstone-pendant.jpg" srcset="img/blue-gemstone-pendant@2x.jpg  2x"
+                    alt="the pendant" width="270" height="272">
                 </picture>
               </div>
               <div class="product__description">
@@ -172,7 +285,8 @@
                 <picture>
                   <source type="image/webp" srcset="img/boho-earrings.webp, img/boho-earrings@2x.webp 2x">
                   <!-- 1х: 270px; 2x: 540px -->
-                  <img src="img/boho-earrings.jpg" srcset="img/boho-earrings@2x.jpg  2x" alt="the pendant" width="270" height="272">
+                  <img src="img/boho-earrings.jpg" srcset="img/boho-earrings@2x.jpg  2x" alt="the pendant" width="270"
+                    height="272">
                 </picture>
               </div>
               <div class="product__description">
@@ -190,7 +304,8 @@
                 <picture>
                   <source type="image/webp" srcset="img/bird-necklace.webp, img/bird-necklace@2x.webp 2x">
                   <!-- 1х: 270px; 2x: 540px -->
-                  <img src="img/bird-necklace.jpg" srcset="img/bird-necklace@2x.jpg  2x" alt="the pendant" width="270" height="272">
+                  <img src="img/bird-necklace.jpg" srcset="img/bird-necklace@2x.jpg  2x" alt="the pendant" width="270"
+                    height="272">
                 </picture>
               </div>
               <div class="product__description">
@@ -206,9 +321,11 @@
             <a class="product" href="#">
               <div class="product__image product__image--catalog">
                 <picture>
-                  <source type="image/webp" srcset="img/black-leather-choker-necklace.webp, img/black-leather-choker-necklace@2x.webp 2x">
+                  <source type="image/webp"
+                    srcset="img/black-leather-choker-necklace.webp, img/black-leather-choker-necklace@2x.webp 2x">
                   <!-- 1х: 270px; 2x: 540px -->
-                  <img src="img/black-leather-choker-necklace.jpg" srcset="img/black-leather-choker-necklace@2x.jpg  2x" alt="the pendant" width="270" height="272">
+                  <img src="img/black-leather-choker-necklace.jpg" srcset="img/black-leather-choker-necklace@2x.jpg  2x"
+                    alt="the pendant" width="270" height="272">
                 </picture>
               </div>
               <div class="product__description">
@@ -224,9 +341,11 @@
             <a class="product" href="#">
               <div class="product__image product__image--catalog">
                 <picture>
-                  <source type="image/webp" srcset="img/purple-gemstone-necklace-desktop.webp, img/purple-gemstone-necklace-desktop@2x.webp 2x">
+                  <source type="image/webp"
+                    srcset="img/purple-gemstone-necklace-desktop.webp, img/purple-gemstone-necklace-desktop@2x.webp 2x">
                   <!-- 1х: 270px; 2x: 540px -->
-                  <img src="img/purple-gemstone-necklace-desktop.jpg" srcset="img/purple-gemstone-necklace-desktop@2x.jpg  2x" alt="the pendant" width="270" height="272">
+                  <img src="img/purple-gemstone-necklace-desktop.jpg"
+                    srcset="img/purple-gemstone-necklace-desktop@2x.jpg  2x" alt="the pendant" width="270" height="272">
                 </picture>
               </div>
               <div class="product__description">
@@ -244,7 +363,8 @@
                 <picture>
                   <source type="image/webp" srcset="img/elephant-earrings.webp, img/elephant-earrings@2x.webp 2x">
                   <!-- 1х: 270px; 2x: 540px -->
-                  <img src="img/elephant-earrings.jpg" srcset="img/elephant-earrings@2x.jpg  2x" alt="the pendant" width="270" height="272">
+                  <img src="img/elephant-earrings.jpg" srcset="img/elephant-earrings@2x.jpg  2x" alt="the pendant"
+                    width="270" height="272">
                 </picture>
               </div>
               <div class="product__description">
@@ -260,9 +380,11 @@
             <a class="product" href="#">
               <div class="product__image product__image--catalog">
                 <picture>
-                  <source type="image/webp" srcset="img/threader-necklace-closeup.webp, img/threader-necklace-closeup@2x.webp 2x">
+                  <source type="image/webp"
+                    srcset="img/threader-necklace-closeup.webp, img/threader-necklace-closeup@2x.webp 2x">
                   <!-- 1х: 270px; 2x: 540px -->
-                  <img src="img/threader-necklace-closeup.jpg" srcset="img/threader-necklace-closeup@2x.jpg  2x" alt="the pendant" width="270" height="272">
+                  <img src="img/threader-necklace-closeup.jpg" srcset="img/threader-necklace-closeup@2x.jpg  2x"
+                    alt="the pendant" width="270" height="272">
                 </picture>
               </div>
               <div class="product__description">
@@ -278,9 +400,11 @@
             <a class="product" href="#">
               <div class="product__image product__image--catalog">
                 <picture>
-                  <source type="image/webp" srcset="img/origami-crane-necklace.webp, img/origami-crane-necklace@2x.webp 2x">
+                  <source type="image/webp"
+                    srcset="img/origami-crane-necklace.webp, img/origami-crane-necklace@2x.webp 2x">
                   <!-- 1х: 270px; 2x: 540px -->
-                  <img src="img/origami-crane-necklace.jpg" srcset="img/origami-crane-necklace@2x.jpg  2x" alt="the pendant" width="270" height="272">
+                  <img src="img/origami-crane-necklace.jpg" srcset="img/origami-crane-necklace@2x.jpg  2x"
+                    alt="the pendant" width="270" height="272">
                 </picture>
               </div>
               <div class="product__description">
@@ -298,7 +422,8 @@
                 <picture>
                   <source type="image/webp" srcset="img/marble-earrings.webp, img/marble-earrings@2x.webp 2x">
                   <!-- 1х: 270px; 2x: 540px -->
-                  <img src="img/marble-earrings.jpg" srcset="img/marble-earrings@2x.jpg  2x" alt="the pendant" width="270" height="272">
+                  <img src="img/marble-earrings.jpg" srcset="img/marble-earrings@2x.jpg  2x" alt="the pendant"
+                    width="270" height="272">
                 </picture>
               </div>
               <div class="product__description">
@@ -314,11 +439,11 @@
         <div class="catalog__buttons">
           <button class="catalog__button catalog__button--pre" type="button">Previous</button>
           <div>
-            <button type="button">1</button>
-            <button type="button">2</button>
-            <button type="button">3</button>
-            <button type="button">4</button>
-            <button type="button">5</button>
+            <button class="catalog__pagination catalog__pagination--active" type="button">1</button>
+            <button class="catalog__pagination" type="button">2</button>
+            <button class="catalog__pagination" type="button">3</button>
+            <button class="catalog__pagination" type="button">4</button>
+            <button class="catalog__pagination" type="button">5</button>
           </div>
           <button class="catalog__button catalog__button--next" type="button">Next</button>
         </div>
@@ -412,6 +537,42 @@
     </div>
   </footer>
 
+  <section class="login">
+    <div class="login__base">
+      <div class="login__wrap">
+        <div class="login__title">
+          <picture>
+            <source type="image/webp" srcset="img/sweet-ice-cream-photography-login.webp, img/sweet-ice-cream-photography-login@2x.webp 2x">
+            <!-- 1х: 430px; 2x: 860px -->
+            <img src="img/sweet-ice-cream-photography-login.jpg" srcset="img/sweet-ice-cream-photography-login@2x.jpg  2x" alt="the pendant"
+              width="430" height="138">
+          </picture>
+          <h2>Log In</h2>
+        </div>
+
+        <form action="https://echo.htmlacademy.ru" method="post">
+          <label>
+            <input type="email" name="login-email" id="email" placeholder="Your E-mail" required>
+          </label>
+          <label>
+            <input type="password" name="login-password" id="password" placeholder="Password" required>
+          </label>
+          <a href="#">Forgot your password?</a>
+          <button type="submit">Log In</button>
+          <div class="login__account">
+            <p>Don’t have an account?&nbsp;<a href="#">Sign up</a></p>
+          </div>
+          <button class="login__close" type="button" aria-label="Закрыть">
+            <svg width="14" height="14">
+              <use xlink:href="img/sprite.svg#close"></use>
+            </svg>
+          </button>
+        </form>
+      </div>
+    </div>
+  </section>
+
   <script src="js/main.js"></script>
 </body>
+
 </html>
