--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <body>
   <header class="header header--nojs">
     <div class="header__wrapper container">
-      <button class="header__toggle" type="button" aria-label="Открыть меню">
+      <button class="header__toggle" type="button" aria-label="Open menu>
         <svg width="25" height="18">
           <use xlink:href="img/sprite.svg#menu"></use>
         </svg>
