--- a/catalog.html
+++ b/catalog.html
@@ -101,9 +101,11 @@
           <fieldset class="form-accordion__item form-accordion__item--active form-accordion__item--nojs">
             <div class="filter__title form-accordion__button">
               <h3>Product</h3>
-              <svg class="form-accordion__toggle form-accordion__toggle--close" width="16" height="15">
-                <use xlink:href="img/sprite.svg#pointer"></use>
-              </svg>
+              <button class="form-accordion__toggle form-accordion__toggle--close" type="button" aria-label="Open/Close">
+                <svg width="16" height="15">
+                  <use xlink:href="img/sprite.svg#pointer"></use>
+                </svg>
+              </button>
             </div>
             <ul class="form-accordion__block">
               <li>
@@ -128,9 +130,11 @@
           <fieldset class="form-accordion__item form-accordion__item--nojs">
             <div class="filter__title form-accordion__button">
               <h3>Material</h3>
-              <svg class="form-accordion__toggle form-accordion__toggle--close" width="16" height="15">
-                <use xlink:href="img/sprite.svg#pointer"></use>
-              </svg>
+              <button class="form-accordion__toggle form-accordion__toggle--close" type="button" aria-label="Open/Close">
+                <svg width="16" height="15">
+                  <use xlink:href="img/sprite.svg#pointer"></use>
+                </svg>
+              </button>
             </div>
             <ul class="form-accordion__block">
               <li>
@@ -147,9 +151,11 @@
           <fieldset class="form-accordion__item form-accordion__item--nojs">
             <div class="filter__title form-accordion__button">
               <h3>Collection</h3>
-              <svg class="form-accordion__toggle form-accordion__toggle--close" width="16" height="15">
-                <use xlink:href="img/sprite.svg#pointer"></use>
-              </svg>
+              <button class="form-accordion__toggle form-accordion__toggle--close" type="button" aria-label="Open/Close">
+                <svg width="16" height="15">
+                  <use xlink:href="img/sprite.svg#pointer"></use>
+                </svg>
+              </button>
             </div>
             <ul class="form-accordion__block">
               <li>
@@ -166,9 +172,11 @@
           <fieldset class="form-accordion__item form-accordion__item--nojs">
             <div class="filter__title form-accordion__button">
               <h3>Price</h3>
-              <svg class="form-accordion__toggle form-accordion__toggle--close" width="16" height="15">
-                <use xlink:href="img/sprite.svg#pointer"></use>
-              </svg>
+              <button class="form-accordion__toggle form-accordion__toggle--close" type="button" aria-label="Open/Close">
+                <svg width="16" height="15">
+                  <use xlink:href="img/sprite.svg#pointer"></use>
+                </svg>
+              </button>
             </div>
 
             <div class="control form-accordion__block">
@@ -443,7 +451,7 @@
         </ul>
         <div class="catalog__buttons">
           <button class="catalog__button catalog__button--pre" type="button">Previous</button>
-          <div>
+          <div class="catalog__inner">
             <button class="catalog__pagination catalog__pagination--active" type="button">1</button>
             <button class="catalog__pagination" type="button">2</button>
             <button class="catalog__pagination" type="button">3</button>
