--- a/index.html
+++ b/index.html
@@ -332,7 +332,7 @@
         <li class="accordion__item accordion__item--nojs">
           <div class="accordion__button">
             <h3>What materials are the jewellery made of?</h3>
-            <button class="accordion__toggle accordion__toggle--close" type="button" aria-label="Открыть/Закрыть">
+            <button class="accordion__toggle accordion__toggle--close" type="button" aria-label="Open/Close">
               <svg width="16" height="15">
                 <use xlink:href="img/sprite.svg#pointer"></use>
               </svg>
@@ -347,7 +347,7 @@
         <li class="accordion__item accordion__item--nojs">
           <div class="accordion__button">
             <h3>Which countries do you deliver to?</h3>
-            <button class="accordion__toggle accordion__toggle--close" type="button" aria-label="Открыть/Закрыть">
+            <button class="accordion__toggle accordion__toggle--close" type="button" aria-label="Open/Close">
               <svg width="16" height="15">
                 <use xlink:href="img/sprite.svg#pointer"></use>
               </svg>
@@ -362,7 +362,7 @@
         <li class="accordion__item accordion__item--nojs">
           <div class="accordion__button">
             <h3>What are the payment methods?</h3>
-            <button class="accordion__toggle accordion__toggle--close" type="button" aria-label="Открыть/Закрыть">
+            <button class="accordion__toggle accordion__toggle--close" type="button" aria-label="Open/Close">
               <svg width="16" height="15">
                 <use xlink:href="img/sprite.svg#pointer"></use>
               </svg>
@@ -377,7 +377,7 @@
         <li class="accordion__item accordion__item--nojs">
           <div class="accordion__button">
             <h3>Can I return the jewellery if it didn’t fit me?</h3>
-            <button class="accordion__toggle accordion__toggle--close" type="button" aria-label="Открыть/Закрыть">
+            <button class="accordion__toggle accordion__toggle--close" type="button" aria-label="Open/Close">
               <svg width="16" height="15">
                 <use xlink:href="img/sprite.svg#pointer"></use>
               </svg>
