--- a/login.html
+++ b/login.html
@@ -18,6 +18,7 @@
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 <body>
+  <h1 class="visually-hidden">Authorization\registration page</h1>
   <div class="login-page">
     <a class="login-page__logo" href="index.html" aria-label="Jewellery logo">
       <svg width="66" height="66">
