--- a/catalog.html
+++ b/catalog.html
@@ -16,6 +16,8 @@
   <link rel="preload" href="fonts/CormorantGaramond-SemiBold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
   <link rel="preload" href="fonts/CormorantGaramond-Bold.woff2" as="font" type="font/woff2" crossorigin="anonymous">
 
+  <link rel="icon" type="image/png" sizes="32x32" href="favicon-32x32.png">
+
   <link rel="stylesheet" href="css/style.min.css">
 </head>
 
